Enable interactive plots on Google Colab

--- a/PPPL_SULI-2024/ex1-fixed_boundary.ipynb
+++ b/PPPL_SULI-2024/ex1-fixed_boundary.ipynb
@@ -21,7 +21,8 @@
     "import os\n",
     "import sys\n",
     "try:\n",
-    "    import google.colab\n",
+    "    from google.colab import output\n",
+    "    output.enable_custom_widget_manager()\n",
     "except:\n",
     "    tokamaker_python_path = os.getenv('OFT_ROOTPATH')\n",
     "    if tokamaker_python_path is not None:\n",
