Update example 1 and example 2

--- a/PPPL_SULI-2024/ex1-fixed_boundary.ipynb
+++ b/PPPL_SULI-2024/ex1-fixed_boundary.ipynb
@@ -134,8 +134,7 @@
     " * [TokaMaker](https://hansec.github.io/OpenFUSIONToolkit/docs/v1.0.0-beta4/classOpenFUSIONToolkit_1_1TokaMaker_1_1__core_1_1TokaMaker.html): The main driver class for computing equilibrium\n",
     " * [gs_Domain](https://hansec.github.io/OpenFUSIONToolkit/docs/v1.0.0-beta4/classOpenFUSIONToolkit_1_1TokaMaker_1_1meshing_1_1gs__Domain.html): A class for defining geometry for the plasma and other device components\n",
     " * [create_isoflux](https://hansec.github.io/OpenFUSIONToolkit/docs/v1.0.0-beta4/namespaceOpenFUSIONToolkit_1_1TokaMaker_1_1util.html#ac5dd5032d63d24acc29c6e1cc39a7505): A helper function that builds surfaces using a standard tokamak definition based on (&kappa; and &delta;)\n",
-    " * [create_power_flux_fun](https://hansec.github.io/OpenFUSIONToolkit/docs/v1.0.0-beta4/namespaceOpenFUSIONToolkit_1_1TokaMaker_1_1util.html): A helper function that builds definitions for $P'$ and $F*F'$ with a simple power-like form\n",
-    " * $\\mu_0$: Our friendly magnetic constant"
+    " * [create_power_flux_fun](https://hansec.github.io/OpenFUSIONToolkit/docs/v1.0.0-beta4/namespaceOpenFUSIONToolkit_1_1TokaMaker_1_1util.html): A helper function that builds definitions for $P'$ and $F*F'$ with a simple power-like form"
    ]
   },
   {
@@ -147,8 +146,7 @@
    "source": [
     "from OpenFUSIONToolkit.TokaMaker import TokaMaker\n",
     "from OpenFUSIONToolkit.TokaMaker.meshing import gs_Domain\n",
-    "from OpenFUSIONToolkit.TokaMaker.util import create_isoflux, create_power_flux_fun\n",
-    "from OpenFUSIONToolkit.util import mu0"
+    "from OpenFUSIONToolkit.TokaMaker.util import create_isoflux, create_power_flux_fun"
    ]
   },
   {
@@ -471,11 +469,11 @@
       "    11  5.9655E+00  7.3447E-03  2.1978E-06  6.4675E+00  2.1204E-05  0.0000E+00\n",
       "    12  5.9657E+00  7.3448E-03  1.1556E-06  6.4675E+00  2.1240E-05  0.0000E+00\n",
       "    13  5.9657E+00  7.3448E-03  6.2615E-07  6.4675E+00  2.1261E-05  0.0000E+00\n",
-      " Timing:   5.3203999996185303E-002\n",
-      "   Source:     3.4785000141710043E-002\n",
-      "   Solve:      6.8570002913475037E-003\n",
-      "   Boundary:   1.8689990974962711E-003\n",
-      "   Other:      9.6930004656314850E-003\n"
+      " Timing:   5.7754999957978725E-002\n",
+      "   Source:     3.6785998847335577E-002\n",
+      "   Solve:      7.7480007894337177E-003\n",
+      "   Boundary:   2.1920008584856987E-003\n",
+      "   Other:      1.1028999462723732E-002\n"
      ]
     }
    ],
@@ -652,7 +650,7 @@
    "id": "335abca3-b9e2-4c9d-881f-adda2e104cfc",
    "metadata": {},
    "source": [
-    "# Change the parameters yourself\n",
+    "# Choose your own adventure\n",
     "\n",
     " * What does the $\\beta_p$ vs `Ip_ratio` look like?\n",
     " * What does $\\Delta R_0$ vs $\\beta_p$ look like?\n",
